objects/blng__BillingTransaction__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__AmountToBeBilled__c</fullName>
        <formula>IF( ISBLANK( blng__OverrideAmount__c ) , blng__Amount__c  , blng__OverrideAmount__c )</formula>
        <label>Amount To Be Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BillingSchedule__c</fullName>
        <label>Billing Schedule</label>
        <referenceTo>blng__BillingSchedule__c</referenceTo>
        <relationshipLabel>Billing Transactions</relationshipLabel>
        <relationshipName>BillingTransactionsBillingSchedule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__BillingTargetDate__c</fullName>
        <label>Billing Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__CalculatedStatus__c</fullName>
        <formula>IF(ISPICKVAL(blng__OverrideStatus__c, &quot;--None--&quot;), TEXT(blng__Status__c), TEXT(blng__OverrideStatus__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__InvoicePlanLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Plan Line</label>
        <referenceTo>blng__InvoicePlanLine__c</referenceTo>
        <relationshipLabel>Billing Transactions</relationshipLabel>
        <relationshipName>BillingTransactionsInvoicePlanLine</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__OverrideAmount__c</fullName>
        <label>Override Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__OverrideBillingTargetDate__c</fullName>
        <label>Override Billing Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__OverrideStatus__c</fullName>
        <label>Override Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__OverrideStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__ServicePeriodEnd__c</fullName>
        <label>Service Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__ServicePeriodStart__c</fullName>
        <label>Service Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__BillingTransactionStatus</valueSetName>
        </valueSet>
    </fields>
    <label>Billing Transaction</label>
    <listViews>
        <fullName>blng__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Billing Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>